--- a/index.jade
+++ b/index.jade
@@ -6,7 +6,9 @@ html
     link(rel="stylesheet", type="text/css", href="css/main.css")
   
   body
-    
+
+    script(src="dist/charites.js")
+
 
     
 
