--- a/index.jade
+++ b/index.jade
@@ -7,6 +7,8 @@ html
   
   body
 
+    canvas#js-canvas
+
     script(src="bower_components/tweenjs/build/tween.min.js")
     script(src="dist/charites.js")
 
