--- a/index.jade
+++ b/index.jade
@@ -7,7 +7,7 @@ html
   
   body
 
-    canvas#js-canvas
+    //- canvas(style="border:1px solid deeppink;")#js-canvas
 
     script(src="bower_components/tweenjs/build/tween.min.js")
     script(src="dist/charites.js")
