add onComplete callback

--- a/index.jade
+++ b/index.jade
@@ -7,6 +7,8 @@ html
   
   body
 
+    #js-wrapper
+
     //- canvas(style="border:1px solid deeppink;")#js-canvas
 
     script(src="dist/charites.js")
