--- a/css/main.css
+++ b/css/main.css
@@ -1219,3 +1219,11 @@ a,
   fill: #717171;
   cursor: pointer;
 }
+canvas {
+  outline: 1px solid #ffa500;
+  width: 200px !important;
+  height: 200px !important;
+  left: 0 !important;
+  display: block !important;
+  right: 0 !important;
+}
