--- a/css/main.styl
+++ b/css/main.styl
@@ -9,5 +9,10 @@
 
 use('assets/nesting-tree-traversal.js')
 
-// canvas
-//   hl orange
+canvas
+  hl orange
+  width  200px II
+  height 200px II
+  left  0 II
+  display block II
+  right 0 II
