working on own/foreign contexts

--- a/index.jade
+++ b/index.jade
@@ -9,7 +9,7 @@ html
 
     #js-wrapper
 
-    //- canvas(style="border:1px solid deeppink;")#js-canvas
+    canvas(style="border:1px solid deeppink;")#js-canvas
 
     script(src="dist/charites.js")
 
