--- a/css/main.styl
+++ b/css/main.styl
@@ -9,5 +9,12 @@
 
 use('assets/nesting-tree-traversal.js')
 
-canvas
-  hl orange
+// canvas
+//   hl orange
+
+.el
+  border 1px solid deeppink
+  border-radius 50%
+  rect 2*gs
+  position absolute
+  nw 0
