--- a/css/main.styl
+++ b/css/main.styl
@@ -13,7 +13,8 @@ use('assets/nesting-tree-traversal.js')
 //   hl orange
 
 .el
-  border 1px solid deeppink
+  // border 1px solid deeppink
+  background hotpink
   border-radius 50%
   rect 2*gs
   position absolute
