--- a/css/main.styl
+++ b/css/main.styl
@@ -15,7 +15,7 @@ use('assets/nesting-tree-traversal.js')
 .el
   // border 1px solid deeppink
   background hotpink
-  border-radius 50%
+  // border-radius 50%
   rect 2*gs
   position absolute
   nw 0
