add translateZ hack

--- a/css/main.styl
+++ b/css/main.styl
@@ -19,3 +19,5 @@ use('assets/nesting-tree-traversal.js')
   rect 2*gs
   position absolute
   nw 0
+  // backface-visibility hidden
+  // transform translateZ(0)
