--- a/index.jade
+++ b/index.jade
@@ -10,8 +10,9 @@ html
     //- #js-wrapper
     //- canvas(style="border:1px solid deeppink;")#js-canvas
     .el#js-el
-    svg
-      path(id="js-svg-path" d="M0.55859375,593.527344 C0.55859375,593.527344 -37.2335443,231.85498 148.347656,187.753906 C333.928857,143.652832 762.699219,412.414062 762.699219,412.414062 L1132.85547,1.15625")
+      div
+    //- svg(style="display:none")
+    //-   path(id="js-svg-path" d="M0.55859375,593.527344 C0.55859375,593.527344 -37.2335443,231.85498 148.347656,187.753906 C333.928857,143.652832 762.699219,412.414062 762.699219,412.414062 L1132.85547,1.15625")
 
     script(src="dist/mojs.js")
     //- script(src="js/main.js")
