add transform origin

--- a/css/main.styl
+++ b/css/main.styl
@@ -13,8 +13,8 @@ use('assets/nesting-tree-traversal.js')
 //   hl orange
 
 .container
-  width  200px
-  height 200px
+  width  800px
+  height 800px
   border 1px solid hotpink
   position relative
 
@@ -22,8 +22,9 @@ use('assets/nesting-tree-traversal.js')
   // border 1px solid deeppink
   background hotpink
   border-radius 50%
-  rect gs
-  margin-left -(gs/2)
+  size = 25*gs
+  rect size
+  margin-left -(size/2)
   position absolute
   nw 0
   // backface-visibility hidden
