add option path

--- a/css/main.styl
+++ b/css/main.styl
@@ -9,6 +9,8 @@
 
 use('assets/nesting-tree-traversal.js')
 
+// iframe
+//   display none !important
 // canvas
 //   hl orange
 
@@ -22,7 +24,7 @@ use('assets/nesting-tree-traversal.js')
   // border 1px solid deeppink
   background hotpink
   border-radius 50%
-  size = 25*gs
+  size = 5*gs
   rect size
   margin-left -(size/2)
   position absolute
