working on bit/line

--- a/css/main.styl
+++ b/css/main.styl
@@ -9,25 +9,28 @@
 
 use('assets/nesting-tree-traversal.js')
 
+svg
+  hl hotpink
+
 // iframe
 //   display none !important
 // canvas
 //   hl orange
 
-.container
-  width  800px
-  height 800px
-  border 1px solid hotpink
-  position relative
+// .container
+//   width  800px
+//   height 800px
+//   border 1px solid hotpink
+//   position relative
 
-.el
-  // border 1px solid deeppink
-  background hotpink
-  border-radius 50%
-  size = 5*gs
-  rect size
-  margin-left -(size/2)
-  position absolute
-  nw 0
-  // backface-visibility hidden
-  // transform translateZ(0)
+// .el
+//   // border 1px solid deeppink
+//   background hotpink
+//   border-radius 50%
+//   size = 5*gs
+//   rect size
+//   margin-left -(size/2)
+//   position absolute
+//   nw 0
+//   // backface-visibility hidden
+//   // transform translateZ(0)
