--- a/css/main.css
+++ b/css/main.css
@@ -1220,19 +1220,6 @@ a,
   fill: #717171;
   cursor: pointer;
 }
-.container {
-  width: 800px;
-  height: 800px;
-  border: 1px solid #ff69b4;
-  position: relative;
-}
-.el {
-  background: #ff69b4;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  margin-left: -20px;
-  position: absolute;
-  top: 0;
-  left: 0;
+svg {
+  outline: 1px solid #ff69b4;
 }
