add byte + setProgress

--- a/index.jade
+++ b/index.jade
@@ -6,8 +6,9 @@ html
     link(rel="stylesheet", type="text/css", href="css/main.css")
   
   body
+    #js-div
 
-    svg(viewBox="0 0 200 200", width="200", height="200")#js-svg
+    //- svg(viewBox="0 0 200 200", width="200", height="200")#js-svg
 
     //- #js-wrapper
     //- canvas(style="border:1px solid deeppink;")#js-canvas
