--- a/index.jade
+++ b/index.jade
@@ -2,7 +2,7 @@ doctype
 html
   head
     meta(charset='UTF-8')
-    title mojs
+    title mo·js
     link(rel="stylesheet", type="text/css", href="css/main.css")
   
   body
