add transit run method

--- a/css/main.styl
+++ b/css/main.styl
@@ -9,8 +9,11 @@
 
 use('assets/nesting-tree-traversal.js')
 
-// svg
-//   hl hotpink
+svg
+  hl hotpink
+  
+body
+  height 600px
 
 // iframe
 //   display none !important
