add isShowInit and isShowEnd options to transit

--- a/css/main.styl
+++ b/css/main.styl
@@ -9,6 +9,21 @@
 
 use('assets/nesting-tree-traversal.js')
 
+// // chrome:
+//   position absolute
+//   overflow hidden
+//   rect 140px
+
+// // safari:
+//   overflow hidden
+//   rect 140px
+
+// .div-wrapper
+//   position absolute
+//   overflow hidden
+//   rect 140px
+// .div
+//   position absolute
 // svg
 //   hl hotpink
   
