--- a/index.jade
+++ b/index.jade
@@ -6,8 +6,8 @@ html
     link(rel="stylesheet", type="text/css", href="css/main.css")
   
   body
-    #js-div
-
+    .div-wrapper
+      #js-div.div
     //- svg(viewBox="0 0 200 200", width="200", height="200")#js-svg
 
     //- #js-wrapper
