burst: add setProgress fixes

--- a/css/main.styl
+++ b/css/main.styl
@@ -24,8 +24,9 @@ use('assets/nesting-tree-traversal.js')
 //   rect 140px
 // .div
 //   position absolute
-// svg
-//   hl hotpink
+svg
+  hl hotpink
+  display block !important
   
 body
   height 600px
