--- a/css/main.css
+++ b/css/main.css
@@ -1220,6 +1220,10 @@ a,
   fill: #717171;
   cursor: pointer;
 }
+svg {
+  outline: 1px solid #ff69b4;
+  display: block !important;
+}
 body {
   height: 600px;
 }
