--- a/css/main.styl
+++ b/css/main.styl
@@ -24,9 +24,8 @@ use('assets/nesting-tree-traversal.js')
 //   rect 140px
 // .div
 //   position absolute
-svg
-  hl hotpink
-  display block !important
+// svg
+//   hl hotpink
   
 body
   height 600px
