--- a/css/main.css
+++ b/css/main.css
@@ -8,12 +8,13 @@ body {
   width: 100%;
   height: 100%;
   position: absolute;
+  overflow: hidden;
 }
 .page__inner {
   overflow: hidden;
   position: absolute;
-  width: 12.5em;
-  height: 12.5em;
+  width: 256px;
+  height: 256px;
   top: 50%;
   left: 50%;
   top: 0;
@@ -22,6 +23,7 @@ body {
   -webkit-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
   backface-visibility: hidden;
+  opacity: 0;
 }
 .page__inner.is-scaled {
   -webkit-transform: scale(40);
@@ -34,10 +36,14 @@ body {
   transform: scale(0.025);
 }
 .page__inner__inner {
+  width: 256px;
+  height: 256px;
   -webkit-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
   backface-visibility: hidden;
-  -webkit-transform-origin: center top;
-  -ms-transform-origin: center top;
-  transform-origin: center top;
+}
+.page__inner__inner__inner {
+  padding: 0 640px;
+  margin-left: -640px;
+  background: #800080;
 }
