bubble effect: add the new layout

--- a/css/assets/mixins.styl
+++ b/css/assets/mixins.styl
@@ -55,13 +55,13 @@ bbox()
 cbox()
   box-sizing content-box
 
-rect(size)
-  width size
-  height size
+// rect(size)
+//   width size
+//   height size
 
-min-rect(size)
-  min-width size
-  min-height size
+// min-rect(size)
+//   min-width size
+//   min-height size
 
 hl(color, size=1px)
   outline size solid color
