--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
 .page {
   background: #ff1493;
   width: 100%;
-  height: 100%;
+  height: 1888px;
   position: absolute;
   overflow: hidden;
 }
@@ -15,8 +15,9 @@ body {
   position: absolute;
   width: 4px;
   height: 4px;
-  top: 0;
-  left: 0;
+  left: 1000px;
+  top: 40px;
+  background: #ffa500;
   -webkit-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -31,33 +32,23 @@ body {
   -webkit-transform: scale(1280);
   -ms-transform: scale(1280);
   transform: scale(1280);
-  -webkit-transition: -webkit-transform 10s linear;
-  transition: transform 10s linear;
+  -webkit-transition: -webkit-transform 7s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: transform 7s cubic-bezier(0.19, 1, 0.22, 1);
 }
 .page__inner.is-scaled .page__inner__inner {
-  -webkit-transform: translateZ(-1635000px);
-  -ms-transform: translateZ(-1635000px);
-  transform: translateZ(-1635000px);
-  -webkit-transition: -webkit-transform 10s linear;
-  transition: transform 10s linear;
+  -webkit-transform: translateZ(-1637000px);
+  -ms-transform: translateZ(-1637000px);
+  transform: translateZ(-1637000px);
+  -webkit-transition: -webkit-transform 7s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: transform 7s cubic-bezier(0.19, 1, 0.22, 1);
 }
 .page__inner__inner {
-  width: 4px;
-  height: 4px;
+  width: 1280px;
+  left: -1000px;
+  top: -40px;
+  position: absolute;
   -webkit-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
   backface-visibility: hidden;
-}
-.page__inner__inner__inner {
-  padding: 450px 640px;
-  position: relative;
-}
-.content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background: #800080;
-  position: absolute;
+  background: #ffa500;
 }
