--- a/index.jade
+++ b/index.jade
@@ -7,7 +7,7 @@ html
     meta(name="viewport", content="width=device-width, max-scale=1")
   
   body
-    .page#js-page
+    //- .page#js-page
       .page__inner#js-eye
         .page__inner__inner#js-pupil
           div lineline line line lineline line line line line line line lineline line line line line line linelineline line lineline line line lineline line line line line line line lineline line line line line line linelineline line lineline line line lineline line line line line line line lineline line line line line line linelineline line lineline line line lineline line line line line line line lineline line line line line line linelineline line
