even child transit now has a tween

--- a/css/main.styl
+++ b/css/main.styl
@@ -85,8 +85,8 @@ windowSize = 1280
 //   rect 140px
 // .div
 //   position absolute
-svg
-  hl hotpink
+// svg
+//   hl hotpink
 // body
 //   height 600px
 
