tween: add setProgress method

--- a/index.jade
+++ b/index.jade
@@ -7,6 +7,8 @@ html
     meta(name="viewport", content="width=device-width, max-scale=1")
   
   body
+    input(type="range", min="0", max="1000", value="0")#js-slider
+
     //- .page#js-page
       .page__inner#js-eye
         .page__inner__inner#js-pupil
