add onFirstUpdateBackward + thens setProgress

--- a/index.jade
+++ b/index.jade
@@ -4,7 +4,7 @@ html
     meta(charset='UTF-8')
     title mo · js
     link(rel="stylesheet", type="text/css", href="css/main.css")
-    meta(name="viewport", content="width=device-width, max-scale=1")
+    meta(name="viewport", content="width=device-width, user-scalable=no")
   
   body
     input(type="range", min="0", max="1000", value="0")#js-slider
