mo path ns_error fix

--- a/index.jade
+++ b/index.jade
@@ -9,6 +9,10 @@ html
   body
     input(type="range", min="0", max="100000", value="0")#js-slider
 
+    //- - for(var i = 0; i < 1; i++)
+    //-   svg(viewBox="0 0 1000 20").svg
+    //-     path(d="M0,10 L1000,10", stroke="deeppink", stroke-dasharray="1000", stroke-dashoffset="1000")#js-line
+
     //- .page#js-page
       .page__inner#js-eye
         .page__inner__inner#js-pupil
