--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+.svg {
+  position: absolute;
+  top: 400px;
+  left: 0;
+}
 html,
 body {
   padding: 0;
@@ -65,7 +70,4 @@ body {
   -ms-backface-visibility: hidden;
   backface-visibility: hidden;
   background: #ffa500;
-}
-svg {
-  outline: 1px solid #ff69b4;
 }
