--- a/css/main.styl
+++ b/css/main.styl
@@ -9,6 +9,11 @@
 
 use('assets/nesting-tree-traversal.js')
 
+.svg
+  position absolute
+  top  50*gs
+  left 0
+
 html, body
   padding 0
   margin 0
@@ -85,8 +90,8 @@ windowSize = 1280
 //   rect 140px
 // .div
 //   position absolute
-svg
-  hl hotpink
+// svg
+//   hl hotpink
 // body
 //   height 600px
 
