--- a/index.jade
+++ b/index.jade
@@ -9,6 +9,11 @@ html
   body
     input(type="range", min="0", max="100000", value="0")#js-slider
 
+    div(style='position: absolute; top: 300px; left: 300px; width: 82px; height: 82px; margin-left: -41px; margin-top: -41px; backface-visibility: hidden; -webkit-backface-visibility: hidden; opacity: 1; display: block; transform: translate(0px, 0px); -webkit-transform: translate(0px, 0px);')
+      svg(style='position: absolute; width: 100%; height: 100%;')
+        ellipse(id="js-ellipse", transform='rotate(0,41,41)', fill-opacity='transparent', stroke-linecap='', stroke-dashoffset='', fill='deeppink', stroke-dasharray='', stroke-opacity='1', stroke-width='1', stroke='deeppink', cy='41', cx='41', ry='32.8', rx='20')
+
+
     //- - for(var i = 0; i < 1; i++)
     //-   svg(viewBox="0 0 1000 20").svg
     //-     path(d="M0,10 L1000,10", stroke="deeppink", stroke-dasharray="1000", stroke-dashoffset="1000")#js-line
