--- a/css/main.styl
+++ b/css/main.styl
@@ -13,6 +13,10 @@ use('assets/nesting-tree-traversal.js')
   position absolute
   top  50*gs
   left 0
+  
+.svg-path
+  position absolute
+  top 20*gs
 
 html, body
   padding 0
@@ -90,8 +94,8 @@ windowSize = 1280
 //   rect 140px
 // .div
 //   position absolute
-svg
-  hl hotpink
+// svg
+//   hl hotpink
 // body
 //   height 600px
 
