h: add isDOM method

--- a/css/main.styl
+++ b/css/main.styl
@@ -21,6 +21,7 @@ use('assets/nesting-tree-traversal.js')
 html, body
   padding 0
   margin 0
+  background #333
 gap = 100px
 originX = 1000px
 originY = 40px
