tween: add method now supports multiple arguments+arrays

--- a/index.jade
+++ b/index.jade
@@ -7,12 +7,12 @@ html
     meta(name="viewport", content="width=device-width, user-scalable=no")
   
   body
-    input(type="range", min="0", max="100000", value="0")#js-slider
+    //- input(type="range", min="0", max="100000", value="0")#js-slider
 
-    svg(width='500px', height='250px', viewbox='0 0 500 250', version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink').svg-path#js-svg
-      path#js-path1(d='M0.55859375,164.449219 L39.8046875,12.4257812 L136.691406,166.269531 L221.34375,2.3984375 L306.511719,164.144531 L378.007812,2.05078125 L456.144531,157.15625', stroke1='#979797', fill="none")
-      path#js-path2(d='M0.55859375,164.449219 L39.8046875,12.4257812 L136.691406,166.269531 L221.34375,2.3984375 L306.511719,164.144531 L378.007812,2.05078125 L456.144531,157.15625', stroke1='#979797', fill="none")
-      path#js-path3(d='M0.55859375,164.449219 L39.8046875,12.4257812 L136.691406,166.269531 L221.34375,2.3984375 L306.511719,164.144531 L378.007812,2.05078125 L456.144531,157.15625', stroke1='#979797', fill="none")
+    //- svg(width='500px', height='250px', viewbox='0 0 500 250', version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink').svg-path#js-svg
+    //-   path#js-path1(d='M0.55859375,164.449219 L39.8046875,12.4257812 L136.691406,166.269531 L221.34375,2.3984375 L306.511719,164.144531 L378.007812,2.05078125 L456.144531,157.15625', stroke1='#979797', fill="none")
+    //-   path#js-path2(d='M0.55859375,164.449219 L39.8046875,12.4257812 L136.691406,166.269531 L221.34375,2.3984375 L306.511719,164.144531 L378.007812,2.05078125 L456.144531,157.15625', stroke1='#979797', fill="none")
+    //-   path#js-path3(d='M0.55859375,164.449219 L39.8046875,12.4257812 L136.691406,166.269531 L221.34375,2.3984375 L306.511719,164.144531 L378.007812,2.05078125 L456.144531,157.15625', stroke1='#979797', fill="none")
     //- div(style='position: absolute; top: 300px; left: 300px; width: 82px; height: 82px; margin-left: -41px; margin-top: -41px; backface-visibility: hidden; -webkit-backface-visibility: hidden; opacity: 1; display: block; transform: translate(0px, 0px); -webkit-transform: translate(0px, 0px);')
       svg(style='position: absolute; width: 100%; height: 100%;')
         ellipse(id="js-ellipse", transform='rotate(0,41,41)', fill-opacity='transparent', stroke-linecap='', stroke-dashoffset='', fill='deeppink', stroke-dasharray='', stroke-opacity='1', stroke-width='1', stroke='deeppink', cy='41', cx='41', ry='32.8', rx='20')
