timeline: onFirstUpdateBAckward now fires if progress went before the start time

--- a/index.jade
+++ b/index.jade
@@ -7,7 +7,7 @@ html
     meta(name="viewport", content="width=device-width, user-scalable=no")
   
   body
-    //- input(type="range", min="0", max="100000", value="0")#js-slider
+    input(type="range", min="0", max="100000", value="100000")#js-slider
 
     //- svg(width='500px', height='250px', viewbox='0 0 500 250', version='1.1', xmlns='http://www.w3.org/2000/svg', xmlns:xlink='http://www.w3.org/1999/xlink').svg-path#js-svg
     //-   path#js-path1(d='M0.55859375,164.449219 L39.8046875,12.4257812 L136.691406,166.269531 L221.34375,2.3984375 L306.511719,164.144531 L378.007812,2.05078125 L456.144531,157.15625', stroke1='#979797', fill="none")
