--- a/index.jade
+++ b/index.jade
@@ -199,7 +199,7 @@ html
     //-   path(id="js-svg-path" d="M0.55859375,593.527344 C0.55859375,593.527344 -37.2335443,231.85498 148.347656,187.753906 C333.928857,143.652832 762.699219,412.414062 762.699219,412.414062 L1132.85547,1.15625")
 
     //- script(src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.15.1/TweenMax.min.js")
-    script(src="dist/mo.js")
+    script(src="build/mo.js")
     //- script(src="js/main.js")
 
 
