--- a/css/main.styl
+++ b/css/main.styl
@@ -9,6 +9,14 @@
 
 use('assets/nesting-tree-traversal.js')
 
+.el
+  width  10px
+  height 10px
+  border-radius 50%
+  background deeppink
+  position absolute
+  nw 50%
+
 // svg
 //   hl deeppink
 
