add motion blur and speed calculations

--- a/css/main.styl
+++ b/css/main.styl
@@ -15,7 +15,7 @@ use('assets/nesting-tree-traversal.js')
   border-radius 50%
   background deeppink
   position absolute
-  nw 50%
+  // nw 50%
 
 // svg
 //   hl deeppink
