--- a/css/main.styl
+++ b/css/main.styl
@@ -10,11 +10,12 @@
 use('assets/nesting-tree-traversal.js')
 
 .el
-  width  10px
-  height 10px
-  border-radius 50%
+  width  50px
+  height 50px
+  // border-radius 50%
   background deeppink
   position absolute
+  top 50%
   // nw 50%
 
 // svg
