--- a/index.jade
+++ b/index.jade
@@ -9,7 +9,17 @@ html
   body
     //- input(type="range", min="0", max="100000", value="0")#js-slider
 
-    #js-el.el
+    #js-el.el text some text
+    svg
+      filter#filter-1(y='-20', x='-20', width='40', height='40')
+        feOffset(in='SourceGraphic', dx='15', dy='0', result='offset2')
+        feGaussianblur(in='offset2', stdDeviation='15,0', result='blur2')
+        feMerge
+          feMergeNode(in='SourceGraphic')
+          feMergeNode(in='blur2')
+
+    .elem(style="filter: url(#filter-1); -webkit-filter: url(#filter-1);") text some text
+
     
     //- svg(width='500px', height='500px')
     //-   path(stroke="white", fill="none", stroke-width="2")#js-path
