--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
 .el {
   width: 50px;
   height: 50px;
+  border-radius: 50%;
   background: #ff1493;
   position: absolute;
   top: 20%;
-  margin-left: 500px;
+  left: 10%;
 }
 .svg {
   position: absolute;
