--- a/css/main.styl
+++ b/css/main.styl
@@ -12,11 +12,12 @@ use('assets/nesting-tree-traversal.js')
 .el
   width  50px
   height 50px
-  // border-radius 50%
+  border-radius 50%
   background deeppink
   position absolute
   top 20%
-  margin-left 500px
+  left 10%
+  // margin-left 500px
   // nw 50%
 
 // svg
