--- a/index.jade
+++ b/index.jade
@@ -4,21 +4,24 @@ html
     meta(charset='UTF-8')
     title mo · js
     link(rel="stylesheet", type="text/css", href="css/main.css")
-    meta(name="viewport", content="width=device-width, user-scalable=no")
+    //- meta(name="viewport", content="width=device-width, user-scalable=no")
   
   body
     //- input(type="range", min="0", max="100000", value="0")#js-slider
 
     #js-el.el text some text
     //- svg
-    //-   filter#filter-1(y='-20', x='-20', width='40', height='40')
-    //-     feOffset(in='SourceGraphic', dx='15', dy='0', result='offset2')
-    //-     feGaussianblur(in='offset2', stdDeviation='15,0', result='blur2')
-    //-     feMerge
-    //-       feMergeNode(in='SourceGraphic')
-    //-       feMergeNode(in='blur2')
+      //- filter#filter-1( x='-100%', y="-100%", height="180%", width="180%")
+      //-   feOffset(in='SourceGraphic', dx='15', dy='0', result='offset2')
+      //-   feGaussianblur(in='offset2', stdDeviation='15,0', result='blur2')
+      //-   feMerge(width="200", height="200", result="res")
+      //-     feMergeNode(in='blur2')
+      //-     feMergeNode(in='SourceGraphic')
+        //- feComponentTransfer
+        //-   feFuncA(type="table", tableValues="1 3 3 6")
+        //- feGaussianblur(in='SourceGraphic', stdDeviation='15,0')
 
-    .elem(style="filter: url(#filter-1); -webkit-filter: url(#filter-1);") text some text
+    //- .elem(style="filter: url(#filter-1); -webkit-filter: url(#filter-1);") text some text
 
     
     //- svg(width='500px', height='500px')
