easing: add path easing

--- a/index.jade
+++ b/index.jade
@@ -7,6 +7,12 @@ html
     //- meta(name="viewport", content="width=device-width, user-scalable=no")
   
   body
+    svg
+      //- clipPath(id="clip")
+      //-   rect(width="50", height="50")
+      //- path(clip-path="url(#clip)", id="js-path", d="M0,100 L10,20 L20,90 L30,30 L40,80 L100, 0", stroke="red", fill="none")
+      //- circle(r="10", id="js-circle")
+      //- path(clip-path="url(#clip)", id="js-path", d="M0,100 L100, 0", stroke="red", fill="none")
     //- input(type="range", min="0", max="100000", value="0")#js-slider
 
     #js-el.el text some text
