--- a/css/main.styl
+++ b/css/main.styl
@@ -12,16 +12,41 @@ use('assets/nesting-tree-traversal.js')
 html, body
   height 1000px
 
-.el
-  width  50px
-  height 50px
-  border-radius 50%
-  background deeppink
-  position absolute
-  top 20%
-  left 10%
-  // margin-left 500px
-  // nw 50%
+
+// .el
+//   width 800px
+//   height 800px
+//   // background #111
+//   background magenta
+//   transform translateZ(0)
+
+// .sprite
+//   position  absolute
+//   left      100px
+//   top       100px
+//   &__frame
+//     // position  absolute
+//     // width     100px
+//     // height    100px
+//     // fill      none
+//     // stroke    deeppink
+//     position  absolute
+//     height    10px
+//     border PX solid deeppink
+//     border-radius 50%
+//     transform translateZ(0)
+
+
+// .el
+//   width  50px
+//   height 50px
+//   border-radius 50%
+//   background deeppink
+//   position absolute
+//   top 20%
+//   left 10%
+//   margin-left 500px
+//   nw 50%
 
 // svg
 //   hl deeppink
