--- a/index.jade
+++ b/index.jade
@@ -7,21 +7,14 @@ html
     //- meta(name="viewport", content="width=device-width, user-scalable=no")
   
   body
-    .el#js-el
-
-
+    //- .el#js-el
     //- svg.sprite#js-sprite
     //-   - for (var i = 0; i < 50; i++)
     //-     ellipse(rx="#{i}", ry="10", cx="80", cy="80", class="sprite__frame", stroke-width="#{5 - i*.1}")
-
-    
-    //- .sprite#js-sprite
-    //-   - var framesCount = 100
-    //-   - var frameStep = .1
-    //-   - for (var i = 0; i < framesCount; i++)
-    //-     .sprite__frame(style="width: #{300 + i}px; margin-left: -#{i/2}px; border-width: #{frameStep*framesCount - i*frameStep}px")
-
-
+    .sprite#js-sprite
+      - for (var i = 0; i < 50; i++)
+        svg.sprite__frame
+          ellipse(rx="25", ry="25", cx="50", cy="50", stroke-width="#{5 - i*.1}", class="sprite__ellipse")
     //- svg
       //- clipPath(id="clip")
       //-   rect(width="50", height="50")
