h: add closeEnough method

--- a/index.jade
+++ b/index.jade
@@ -15,6 +15,13 @@ html
       - for (var i = 0; i < 1; i++)
         svg.sprite__frame
           ellipse(rx="25", ry="25", cx="50", cy="50", stroke-width="#{5 - i*.1}", class="sprite__ellipse")
+
+    //- svg(width="1002px", height="1002px", viewBox="0 0 102 102")
+    //-   g(stroke="hotpink", stroke-width="1", fill="none")
+    //-       path(d="M101,51 C101,23.3857625 78.6142375,1 51,1 C23.3857625,1 1,23.3857625 1,51", stroke-dasharray="157.0796", stroke-dashoffset="31.41592")
+    //-       path(d="M0,100 L100,0", stroke-dasharray="146", stroke-dashoffset="-14.6")
+    //-       path(d="M1,81 L101,81", stroke-dasharray="100", stroke-dashoffset="-10")
+
     //- svg
       //- clipPath(id="clip")
       //-   rect(width="50", height="50")
