staggler: add the first implementation

--- a/css/main.styl
+++ b/css/main.styl
@@ -9,6 +9,13 @@
 
 use('assets/nesting-tree-traversal.js')
 
+.el
+  width  20*PX
+  height 20*PX
+  background #aaa
+  position absolute
+
+
 html, body
   height 1000px
 
