path easing: add new defaults. precompute = 1450, eps = 0.001

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,13 @@
 .el {
   width: 1.25em;
-  height: 1.25em;
+  height: 7.5em;
   background: #aaa;
   position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform-origin: center bottom;
+  -ms-transform-origin: center bottom;
+  transform-origin: center bottom;
 }
 html,
 body {
