--- a/css/main.styl
+++ b/css/main.styl
@@ -11,9 +11,12 @@ use('assets/nesting-tree-traversal.js')
 
 .el
   width  20*PX
-  height 20*PX
+  height 120*PX
   background #aaa
   position absolute
+  left 50%
+  top: 50%
+  transform-origin center bottom
 
 
 html, body
