--- a/index.jade
+++ b/index.jade
@@ -12,8 +12,7 @@ html
     //- .el#js-el3
 
     //- script(src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.15.1/TweenMax.min.js")
-    script(src="build/mo.js")
-    //- script(src="js/main.js")
+    script(src="dist/mo.min.js")
 
 
     
