--- a/css/main.styl
+++ b/css/main.styl
@@ -7,15 +7,14 @@
 // @import 'css-assets/effects'
 // @import 'css-assets/icons'
 
-use('assets/nesting-tree-traversal.js')
+// use('assets/nesting-tree-traversal.js')
 
 .el
   width  20*PX
   height 120*PX
   background #aaa
   position absolute
-  left 50%
-  top: 50%
+  left 0
   transform-origin center bottom
 
 
