html: initial commit

--- a/css/main.styl
+++ b/css/main.styl
@@ -15,7 +15,7 @@
   background #aaa
   position absolute
   left 0
-  transform-origin center bottom
+  // transform-origin center bottom
 
 
 html, body
