--- a/css/css-assets/normalize.styl
+++ b/css/css-assets/normalize.styl
@@ -1,4 +1,4 @@
-/* https://meyerweb.com/eric/tools/css/reset/
+/* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
