Use center to justify content instead

--- a/dev/style.css
+++ b/dev/style.css
@@ -12,7 +12,7 @@ html {
 
 body {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   overflow: hidden;
   width: 100vw;
